Finish 'Structured Concurrency'